# buffer-tree-calc

./: BufferTreeCalcConfig.cmake.in  BufferTreeCalcConfig_global.h  CMakeLists.txt  buffercalcbrainstorming.cpp  buffercalcbrainstorming.h  main.cpp
.github/workflows/: buildAndTest.yml
access-strategies/: abstractaccessstrategy.h  singlethreadedaccessstrategy.cpp  singlethreadedaccessstrategy.h
buffers/: bufferbarefloat.cpp  bufferbarefloat.h  buffertemplate.cpp  buffertemplate.cpp.autosave  buffertemplate.h  buffervectorfloat.h  buffervectorint16.h
calc-components/: abstractcalculationcomponent.cpp  abstractcalculationcomponent.h  calcInterface.h  calccomponent.cpp  calccomponent.h  calccomposite.cpp  calccomposite.h  calcinterface.h  calculatorbase.cpp  calculatorbase.h  calculatorbase_impl.h  calculatorbasein1.h  calculatorbasein1_impl.h  tcalccontainer.cpp  tcalccontainer.h  tcalccontainerimplement.h  tcalculator.cpp  tcalculator.h
calc-components/calculators/: calculatoradd.h  calculatoradd_impl.h  calculatordiff.cpp  calculatordiff.h  calculatordiff_impl.h  calculatorfftfloat.cpp  calculatorfftfloat.h  calculatorfftw.h  calculatorfftwfloat.cpp  calculatorfftwfloat.h  calculatorfftwinv.h  calculatorfftwinvfloat.cpp  calculatorfftwinvfloat.h  calculatormult.h  calculatormult_impl.h  calculatornull.h  convertfloatingtointeger.h  convertfloatingtointeger_impl.h  convertfloattoint16.cpp  convertfloattoint16.h  convertint16tofloat.cpp  convertint16tofloat.h  convertintegertofloating.h  convertintegertofloating_impl.h  nullcomponent.h  sampletofftfloat.h
calc-components/calculators/implementation-headers/: calculatoradd_impl.h  calculatordiff_impl.h  calculatormult_impl.h  convertfloatingtointeger_impl.h  convertintegertofloating_impl.h
calc-composite/: abstractcalculationcomponent.cpp  abstractcalculationcomponent.h  calculationcomposite.cpp  calculationcomposite.h  calculationnode.cpp  calculationnode.h
calc-composite/components/: sampletoharmonicsfloatcalc.cpp  sampletoharmonicsfloatcalc.h
calc-composite/leaf-components/: convertint16tofloat.cpp  convertint16tofloat.h  nullcomponent.cpp  nullcomponent.h  sampletofftfloat.cpp  sampletofftfloat.h
calc-strategies/: abstractcalculationstrategy.cpp  abstractcalculationstrategy.h
magic-calc/: CMakeLists.txt  buffercalcbrainstorming.cpp  buffercalcbrainstorming.h
tests/: calcfortest.h  unittest-buffertemplate.cpp  unittest-calculatoradd.cpp  unittest-calculatorbase.cpp  unittest-calculatordiff.cpp  unittest-calculatorfftwfloat.cpp  unittest-calculatormult.cpp  unittest-convertfloatingnumbertointeger.cpp  unittest-convertfloatingtointeger.cpp  unittest-convertintegertofloating.cpp  unittest-singlethreadedaccessstrategy.cpp
